@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2009 the original author or authors.
+ * Copyright 2006-2008 the original author or authors.
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,15 +17,11 @@
 
 package org.springframework.osgi.service.exporter.support;
 
-import java.security.AccessControlContext;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.Arrays;
 import java.util.Dictionary;
 import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -40,22 +36,16 @@ import org.springframework.beans.factory.BeanFactoryAware;
 import org.springframework.beans.factory.BeanNameAware;
 import org.springframework.beans.factory.FactoryBean;
 import org.springframework.beans.factory.InitializingBean;
-import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 import org.springframework.core.Ordered;
 import org.springframework.osgi.context.BundleContextAware;
-import org.springframework.osgi.context.support.internal.classloader.ClassLoaderFactory;
-import org.springframework.osgi.context.support.internal.scope.OsgiBundleScope;
-import org.springframework.osgi.context.support.internal.security.SecurityUtils;
+import org.springframework.osgi.context.internal.classloader.ClassLoaderFactory;
+import org.springframework.osgi.context.support.internal.OsgiBundleScope;
 import org.springframework.osgi.service.exporter.OsgiServicePropertiesResolver;
 import org.springframework.osgi.service.exporter.support.internal.controller.ExporterController;
 import org.springframework.osgi.service.exporter.support.internal.controller.ExporterInternalActions;
-import org.springframework.osgi.service.exporter.support.internal.support.LazyTargetResolver;
-import org.springframework.osgi.service.exporter.support.internal.support.ListenerNotifier;
 import org.springframework.osgi.service.exporter.support.internal.support.PublishingServiceFactory;
-import org.springframework.osgi.service.exporter.support.internal.support.ServiceRegistrationDecorator;
-import org.springframework.osgi.service.exporter.support.internal.support.ServiceRegistrationWrapper;
 import org.springframework.osgi.util.OsgiServiceUtils;
 import org.springframework.osgi.util.internal.ClassUtils;
 import org.springframework.osgi.util.internal.MapBasedDictionary;
@@ -65,18 +55,24 @@ import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
 /**
- * FactoryBean that transparently publishes other beans in the same application context as OSGi services returning the
- * ServiceRegistration for the given object. Also known as an <em>exporter</em> this class handle the registration and
- * unregistration of an OSGi service for the backing/target object.
+ * FactoryBean that transparently publishes other beans in the same application
+ * context as OSGi services returning the ServiceRegistration for the given
+ * object. Also known as an <em>exporter</em> this class handle the
+ * registration and unregistration of an OSGi service for the backing/target
+ * object.
  * 
- * <p/> The service properties used when publishing the service are determined by the OsgiServicePropertiesResolver. The
- * default implementation uses <ul> <li>BundleSymbolicName=&lt;bundle symbolic name&gt;</li>
- * <li>BundleVersion=&lt;bundle version&gt;</li> <li>org.springframework.osgi.bean.name="&lt;bean name&gt;</li> </ul>
+ * <p/> The service properties used when publishing the service are determined
+ * by the OsgiServicePropertiesResolver. The default implementation uses
+ * <ul>
+ * <li>BundleSymbolicName=&lt;bundle symbolic name&gt;</li>
+ * <li>BundleVersion=&lt;bundle version&gt;</li>
+ * <li>org.springframework.osgi.bean.name="&lt;bean name&gt;</li>
+ * </ul>
  * 
- * <p/> <strong>Note:</strong>If thread context class loader management is used (
- * {@link #setContextClassLoader(ExportContextClassLoader)}, since proxying is required, the target class has to meet
- * certain criterion described in the Spring AOP documentation. In short, final classes are not supported when class
- * enhancement is used.
+ * <p/> <strong>Note:</strong>If thread context class loader management is used ({@link #setContextClassLoader(ExportContextClassLoader)},
+ * since proxying is required, the target class has to meet certain criterion
+ * described in the Spring AOP documentation. In short, final classes are not
+ * supported when class enhancement is used.
  * 
  * @author Adrian Colyer
  * @author Costin Leau
@@ -85,8 +81,7 @@ import org.springframework.util.StringUtils;
  * 
  */
 public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implements BeanClassLoaderAware,
-		BeanFactoryAware, BeanNameAware, BundleContextAware, FactoryBean<ServiceRegistration>, InitializingBean,
-		Ordered {
+		BeanFactoryAware, BeanNameAware, BundleContextAware, FactoryBean, InitializingBean, Ordered {
 
 	/**
 	 * Wrapper around internal commands.
@@ -109,50 +104,30 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 		public void unregisterService() {
 			OsgiServiceFactoryBean.this.unregisterService();
 		}
-
-		public void callUnregisterOnStartup() {
-			OsgiServiceFactoryBean.this.resolver.startupUnregisterIfPossible();
-		}
 	};
 
-	/**
-	 * Callback that propagates the changes in the service properties to the registration object.
-	 * 
-	 * @author Costin Leau
-	 */
-	private class PropertiesMonitor implements ServicePropertiesChangeListener {
-
-		public void propertiesChange(ServicePropertiesChangeEvent event) {
-			serviceProperties = event.getServiceProperties();
-			Dictionary dictionary = mergeServiceProperties(serviceProperties, beanName);
-			if (serviceRegistration != null) {
-				serviceRegistration.setProperties(dictionary);
-			}
-		}
-	}
 
 	private static final Log log = LogFactory.getLog(OsgiServiceFactoryBean.class);
 
-	private volatile BundleContext bundleContext;
-	private volatile OsgiServicePropertiesResolver propertiesResolver;
-	private volatile BeanFactory beanFactory;
-	private volatile ServiceRegistrationDecorator serviceRegistration;
-	private final ServiceRegistrationWrapper safeServiceRegistration = new ServiceRegistrationWrapper(null);
-	private volatile Map serviceProperties;
-	private volatile ServicePropertiesChangeListener propertiesListener;
-	private volatile int ranking;
-	private volatile String targetBeanName;
+	private BundleContext bundleContext;
+	private OsgiServicePropertiesResolver propertiesResolver;
+	private BeanFactory beanFactory;
+	private ServiceRegistration serviceRegistration;
+	private Map serviceProperties;
+	private int ranking;
+	private String targetBeanName;
 	private boolean hasNamedBean;
-	private volatile Class<?>[] interfaces;
-	private InterfaceDetector interfaceDetector = DefaultInterfaceDetector.DISABLED;
-	private volatile ExportContextClassLoaderEnum contextClassLoader = ExportContextClassLoaderEnum.UNMANAGED;
-	private volatile Object target;
-	private volatile Class<?> targetClass;
+	private Class[] interfaces;
+	private AutoExport autoExport = AutoExport.DISABLED;
+	private ExportContextClassLoader contextClassLoader = ExportContextClassLoader.UNMANAGED;
+	private Object target;
+	private Class targetClass;
 	/** Default value is same as non-ordered */
 	private int order = Ordered.LOWEST_PRECEDENCE;
 	private ClassLoader classLoader;
 	/** class loader used by the aop infrastructure */
 	private ClassLoader aopClassLoader;
+
 	/** exporter bean name */
 	private String beanName;
 	/** registration sanity flag */
@@ -165,11 +140,7 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	private final Object lock = new Object();
 	/** internal behaviour controller */
 	private final ExporterController controller;
-	private volatile LazyTargetResolver resolver;
-	private ListenerNotifier notifier;
-	private final AtomicBoolean activated = new AtomicBoolean(false);
-	/** should the service be cached or not */
-	private boolean cacheTarget = false;
+
 
 	public OsgiServiceFactoryBean() {
 		controller = new ExporterController(new Executor());
@@ -193,26 +164,18 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 					+ "' inside the running bean factory.");
 
 			if (beanFactory.isSingleton(targetBeanName)) {
-				if (beanFactory instanceof ConfigurableListableBeanFactory) {
-					ConfigurableListableBeanFactory clbf = (ConfigurableListableBeanFactory) beanFactory;
-					BeanDefinition definition = clbf.getBeanDefinition(targetBeanName);
-					if (!definition.isLazyInit()) {
-						target = beanFactory.getBean(targetBeanName);
-						targetClass = target.getClass();
-					}
-				}
+				target = beanFactory.getBean(targetBeanName);
+				targetClass = target.getClass();
 			}
-
-			if (targetClass == null) {
-				// lazily get the target class
+			else {
 				targetClass = beanFactory.getType(targetBeanName);
 			}
 
 			// when running inside a container, add the dependency between this bean and the target one
 			addBeanFactoryDependency();
-		} else {
-			targetClass = target.getClass();
 		}
+		else
+			targetClass = target.getClass();
 
 		if (propertiesResolver == null) {
 			propertiesResolver = new BeanNameServicePropertiesResolver();
@@ -221,26 +184,20 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 
 		// sanity check
 		if (interfaces == null) {
-			if (AutoExport.DISABLED.equals(interfaceDetector)
-					|| DefaultInterfaceDetector.DISABLED.equals(interfaceDetector))
+			if (AutoExport.DISABLED.equals(autoExport))
 				throw new IllegalArgumentException(
-						"No service interface(s) specified and auto-export discovery disabled; change at least one of these properties.");
+					"No service interface(s) specified and auto-export discovery disabled; change at least one of these properties.");
 			interfaces = new Class[0];
 		}
 		// check visibility type
 		else {
 			if (!ServiceFactory.class.isAssignableFrom(targetClass)) {
 				for (int interfaceIndex = 0; interfaceIndex < interfaces.length; interfaceIndex++) {
-					Class<?> intf = interfaces[interfaceIndex];
+					Class intf = interfaces[interfaceIndex];
 					Assert.isAssignable(intf, targetClass,
-							"Exported service object does not implement the given interface: ");
+						"Exported service object does not implement the given interface: ");
 				}
 			}
-		}
-		// check service properties listener
-		if (serviceProperties instanceof ServicePropertiesListenerManager) {
-			propertiesListener = new PropertiesMonitor();
-			((ServicePropertiesListenerManager) serviceProperties).addListener(propertiesListener);
 		}
 
 		boolean shouldRegisterAtStartup;
@@ -248,24 +205,8 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 			shouldRegisterAtStartup = registerAtStartup;
 		}
 
-		resolver =
-				new LazyTargetResolver(target, beanFactory, targetBeanName, cacheTarget, getNotifier(),
-						getLazyListeners());
-
-		if (shouldRegisterAtStartup) {
+		if (shouldRegisterAtStartup)
 			registerService();
-		}
-	}
-
-	public void destroy() {
-		if (propertiesListener != null) {
-			if (serviceProperties instanceof ServicePropertiesListenerManager) {
-				((ServicePropertiesListenerManager) serviceProperties).removeListener(propertiesListener);
-			}
-			propertiesListener = null;
-		}
-
-		super.destroy();
 	}
 
 	private void addBeanFactoryDependency() {
@@ -276,39 +217,32 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 				cbf.registerDependentBean(targetBeanName, BeanFactory.FACTORY_BEAN_PREFIX + beanName);
 				cbf.registerDependentBean(targetBeanName, beanName);
 			}
-		} else {
-			log.warn("The running bean factory cannot support dependencies between beans "
-					+ "- importer/exporter dependency cannot be enforced");
+		}
+		else {
+			log.warn("The running bean factory cannot support dependencies between beans - importer/exporter dependency cannot be enforced");
 		}
 	}
 
-	private Dictionary mergeServiceProperties(Map serviceProperties, String beanName) {
-		MapBasedDictionary props = new MapBasedDictionary();
+	private Dictionary mergeServiceProperties(String beanName) {
+		MapBasedDictionary props = new MapBasedDictionary(propertiesResolver.getServiceProperties(beanName));
+
+		props.putAll((Map) props);
 
 		// add service properties
 		if (serviceProperties != null)
 			props.putAll(serviceProperties);
 
-		// eliminate any property that might clash with the official ones
-		props.remove(OsgiServicePropertiesResolver.BEAN_NAME_PROPERTY_KEY);
-		props.remove(OsgiServicePropertiesResolver.BLUEPRINT_COMP_NAME);
-		props.remove(Constants.SERVICE_RANKING);
-
-		// override any user property that might clash with the official ones
-		props.putAll(propertiesResolver.getServiceProperties(beanName));
-
 		if (ranking != 0) {
-			props.put(Constants.SERVICE_RANKING, Integer.valueOf(ranking));
+			props.put(org.osgi.framework.Constants.SERVICE_RANKING, new Integer(ranking));
 		}
-
 		return props;
 	}
 
 	/**
-	 * Publishes the given object as an OSGi service. It simply assembles the classes required for publishing and then
-	 * delegates the actual registration to a dedicated method.
+	 * Publishes the given object as an OSGi service. It simply assembles the
+	 * classes required for publishing and then delegates the actual
+	 * registration to a dedicated method.
 	 */
-	@Override
 	void registerService() {
 
 		synchronized (lock) {
@@ -319,35 +253,32 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 		}
 
 		// if we have a nested bean / non-Spring managed object
-		String beanName = (!hasNamedBean ? null : targetBeanName);
+		String beanName = (!hasNamedBean ? ObjectUtils.getIdentityHexString(target) : targetBeanName);
 
-		Dictionary serviceProperties = mergeServiceProperties(this.serviceProperties, beanName);
+		Dictionary serviceProperties = mergeServiceProperties(beanName);
 
-		Class<?>[] intfs = interfaces;
+		Class[] intfs = interfaces;
 
 		// filter classes based on visibility
 		ClassLoader beanClassLoader = ClassUtils.getClassLoader(targetClass);
-		Class<?>[] autoDetectedClasses =
-				ClassUtils.getVisibleClasses(interfaceDetector.detect(targetClass), beanClassLoader);
+		Class[] autoDetectedClasses = ClassUtils.getVisibleClasses(autoExport.getExportedClasses(targetClass),
+			beanClassLoader);
 
 		if (log.isTraceEnabled())
-			log.trace("Autoexport mode [" + interfaceDetector + "] discovered on class [" + targetClass + "] classes "
+			log.trace("Autoexport mode [" + autoExport + "] discovered on class [" + targetClass + "] classes "
 					+ ObjectUtils.nullSafeToString(autoDetectedClasses));
 
 		// filter duplicates
-		Set<Class<?>> classes = new LinkedHashSet<Class<?>>(intfs.length + autoDetectedClasses.length);
+		Set classes = new LinkedHashSet(intfs.length + autoDetectedClasses.length);
 
 		CollectionUtils.mergeArrayIntoCollection(intfs, classes);
 		CollectionUtils.mergeArrayIntoCollection(autoDetectedClasses, classes);
 
-		Class<?>[] mergedClasses = (Class[]) classes.toArray(new Class[classes.size()]);
+		Class[] mergedClasses = (Class[]) classes.toArray(new Class[classes.size()]);
 
 		ServiceRegistration reg = registerService(mergedClasses, serviceProperties);
-		serviceRegistration = new ServiceRegistrationDecorator(reg);
-		safeServiceRegistration.swap(serviceRegistration);
 
-		resolver.setDecorator(serviceRegistration);
-		resolver.notifyIfPossible();
+		serviceRegistration = notifyListeners(target, (Map) serviceProperties, reg);
 	}
 
 	/**
@@ -357,35 +288,26 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	 * @param serviceProperties
 	 * @return the ServiceRegistration
 	 */
-	ServiceRegistration registerService(Class<?>[] classes, final Dictionary serviceProperties) {
-		Assert.notEmpty(classes, "at least one class has to be specified for exporting "
-				+ "(if autoExport is enabled then maybe the object doesn't implement any interface)");
+	ServiceRegistration registerService(Class[] classes, Dictionary serviceProperties) {
+		Assert.notEmpty(
+			classes,
+			"at least one class has to be specified for exporting (if autoExport is enabled then maybe the object doesn't implement any interface)");
 
 		// create an array of classnames (used for registering the service)
-		final String[] names = ClassUtils.toStringArray(classes);
+		String[] names = ClassUtils.toStringArray(classes);
 		// sort the names in alphabetical order (eases debugging)
 		Arrays.sort(names);
 
 		log.info("Publishing service under classes [" + ObjectUtils.nullSafeToString(names) + "]");
 
-		ServiceFactory serviceFactory =
-				new PublishingServiceFactory(resolver, classes, (ExportContextClassLoaderEnum.SERVICE_PROVIDER
-						.equals(contextClassLoader)), classLoader, aopClassLoader, bundleContext);
+		ServiceFactory serviceFactory = new PublishingServiceFactory(classes, target, beanFactory, targetBeanName,
+			(contextClassLoader == ExportContextClassLoader.SERVICE_PROVIDER), classLoader, aopClassLoader,
+			bundleContext);
 
 		if (isBeanBundleScoped())
 			serviceFactory = new OsgiBundleScope.BundleScopeServiceFactory(serviceFactory);
 
-		if (System.getSecurityManager() != null) {
-			AccessControlContext acc = SecurityUtils.getAccFrom(beanFactory);
-			final ServiceFactory serviceFactoryFinal = serviceFactory;
-			return AccessController.doPrivileged(new PrivilegedAction<ServiceRegistration>() {
-				public ServiceRegistration run() {
-					return bundleContext.registerService(names, serviceFactoryFinal, serviceProperties);
-				}
-			}, acc);
-		} else {
-			return bundleContext.registerService(names, serviceFactory, serviceProperties);
-		}
+		return bundleContext.registerService(names, serviceFactory, serviceProperties);
 	}
 
 	private boolean isBeanBundleScoped() {
@@ -393,11 +315,11 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 		// if we do have a bundle scope, use ServiceFactory decoration
 		if (targetBeanName != null) {
 			if (beanFactory instanceof ConfigurableListableBeanFactory) {
-				String beanScope =
-						((ConfigurableListableBeanFactory) beanFactory).getMergedBeanDefinition(targetBeanName)
-								.getScope();
+				String beanScope = ((ConfigurableListableBeanFactory) beanFactory).getMergedBeanDefinition(
+					targetBeanName).getScope();
 				bundleScoped = OsgiBundleScope.SCOPE_NAME.equals(beanScope);
-			} else
+			}
+			else
 				// if for some reason, the passed in BeanFactory can't be
 				// queried for scopes and we do
 				// have a bean reference, apply scoped decoration.
@@ -414,20 +336,19 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	/**
 	 * {@inheritDoc}
 	 * 
-	 * <p/> Returns a {@link ServiceRegistration} to the OSGi service for the target object.
+	 * <p/> Returns a {@link ServiceRegistration} to the OSGi service for the
+	 * target object.
 	 */
-	public ServiceRegistration getObject() throws Exception {
-		// activate
-		resolver.activate();
-		return safeServiceRegistration;
+	public Object getObject() throws Exception {
+		return serviceRegistration;
 	}
 
-	public Class<? extends ServiceRegistration> getObjectType() {
-		return ServiceRegistration.class;
+	public Class getObjectType() {
+		return (serviceRegistration != null ? serviceRegistration.getClass() : ServiceRegistration.class);
 	}
 
 	public boolean isSingleton() {
-		return true;
+		return false;
 	}
 
 	void unregisterService() {
@@ -450,40 +371,23 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	void unregisterService(ServiceRegistration registration) {
 		if (OsgiServiceUtils.unregisterService(registration)) {
 			log.info("Unregistered service [" + registration + "]");
-			if (resolver != null)
-				resolver.setDecorator(null);
 		}
 	}
 
 	/**
-	 * Sets the context class loader management strategy to use when invoking operations on the exposed target bean. By
-	 * default, {@link ExportContextClassLoader#UNMANAGED} is used.
+	 * Sets the context class loader management strategy to use when invoking
+	 * operations on the exposed target bean. By default,
+	 * {@link ExportContextClassLoader#UNMANAGED} is used.
 	 * 
-	 * <p/> <strong>Note:</strong> Since proxying is required for context class loader manager, the target class has to
-	 * meet certain criteria described in the Spring AOP documentation. In short, final classes are not supported when
-	 * class enhancement is used.
+	 * <p/> <strong>Note:</strong> Since proxying is required for context class
+	 * loader manager, the target class has to meet certain criterias described
+	 * in the Spring AOP documentation. In short, final classes are not
+	 * supported when class enhancement is used.
 	 * 
 	 * @param ccl context class loader strategy to use
 	 * @see ExportContextClassLoader
-	 * @deprecated As of Spring DM 2.0, replaced by {@link #setExportContextClassLoader(ExportContextClassLoaderEnum)}
 	 */
 	public void setContextClassLoader(ExportContextClassLoader ccl) {
-		Assert.notNull(ccl);
-		this.contextClassLoader = ccl.getExportContextClassLoaderEnum();
-	}
-
-	/**
-	 * Sets the context class loader management strategy to use when invoking operations on the exposed target bean. By
-	 * default, {@link ExportContextClassLoader#UNMANAGED} is used.
-	 * 
-	 * <p/> <strong>Note:</strong> Since proxying is required for context class loader manager, the target class has to
-	 * meet certain criteria described in the Spring AOP documentation. In short, final classes are not supported when
-	 * class enhancement is used.
-	 * 
-	 * @param ccl context class loader strategy to use
-	 * @see ExportContextClassLoader
-	 */
-	public void setExportContextClassLoader(ExportContextClassLoaderEnum ccl) {
 		Assert.notNull(ccl);
 		this.contextClassLoader = ccl;
 	}
@@ -498,8 +402,9 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Sets the given object to be export as an OSGi service. Normally used when the exported service is a nested bean
-	 * or an object not managed by the Spring container. Note that the passed target instance is ignored if
+	 * Sets the given object to be export as an OSGi service. Normally used when
+	 * the exported service is a nested bean or an object not managed by the
+	 * Spring container. Note that the passed target instance is ignored if
 	 * {@link #setTargetBeanName(String)} is used.
 	 * 
 	 * @param target the object to be exported as an OSGi service
@@ -518,8 +423,9 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Sets the name of the bean managed by the Spring container, which will be exported as an OSGi service. This method
-	 * is normally what most use-cases need, rather then {@link #setTarget(Object)}.
+	 * Sets the name of the bean managed by the Spring container, which will be
+	 * exported as an OSGi service. This method is normally what most use-cases
+	 * need, rather then {@link #setTarget(Object)}.
 	 * 
 	 * @param name target bean name
 	 */
@@ -528,30 +434,20 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Sets the strategy used for automatically publishing classes. This allows the exporter to use the target class
-	 * hierarchy and/or interfaces for registering the OSGi service. By default, autoExport is disabled
+	 * Sets the strategy used for automatically publishing classes. This allows
+	 * the exporter to use the target class hierarchy and/or interfaces for
+	 * registering the OSGi service. By default, autoExport is disabled
 	 * {@link AutoExport#DISABLED}.
 	 * 
-	 * @param classExporter class exporter used for automatically publishing service classes.
+	 * @param classExporter class exporter used for automatically publishing
+	 *        service classes.
 	 * 
 	 * @see AutoExport
-	 * @deprecated
+	 * 
 	 */
 	public void setAutoExport(AutoExport classExporter) {
 		Assert.notNull(classExporter);
-		this.interfaceDetector = classExporter;
-	}
-
-	/**
-	 * Sets the strategy used for automatically publishing classes. This allows the exporter to use the target class
-	 * hierarchy and/or interfaces for registering the OSGi service. By default, autoExport is disabled
-	 * {@link DefaultInterfaceDetector#DISABLED}.
-	 * 
-	 * @param detector
-	 */
-	public void setInterfaceDetector(InterfaceDetector detector) {
-		Assert.notNull(detector);
-		this.interfaceDetector = detector;
+		this.autoExport = classExporter;
 	}
 
 	/**
@@ -564,11 +460,10 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Sets the properties used when exposing the target as an OSGi service. If the given argument implements (
-	 * {@link ServicePropertiesChangeListener}), any updates to the properties will be reflected by the service
-	 * registration.
+	 * Sets the properties used when exposing the target as an OSGi service.
 	 * 
-	 * @param serviceProperties properties used for exporting the target as an OSGi service
+	 * @param serviceProperties properties used for exporting the target as an
+	 *        OSGi service
 	 */
 	public void setServiceProperties(Map serviceProperties) {
 		this.serviceProperties = serviceProperties;
@@ -595,10 +490,12 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Controls whether the service actually gets published or not. This can be used by application context creators to
-	 * control service creation without blocking the creation of the context
+	 * Controls whether the service actually gets published or not. This can be
+	 * used by application context creators to control service creation without
+	 * blocking the creation of the context
 	 * 
-	 * @param register whether to register the service or not. The default is true.
+	 * @param register whether to register the service or not. The default is
+	 *        true.
 	 */
 	public void setRegisterService(boolean register) {
 		registerService = register;
@@ -626,7 +523,8 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Sets the property resolver used when publishing the bean as an OSGi service.
+	 * Sets the property resolver used when publishing the bean as an OSGi
+	 * service.
 	 * 
 	 * @param resolver service property resolver
 	 */
@@ -635,21 +533,23 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Returns the interfaces that will be considered when exporting the target as an OSGi service.
+	 * Returns the interfaces that will be considered when exporting the target
+	 * as an OSGi service.
 	 * 
-	 * @return interfaces under which the target will be published as an OSGi service
+	 * @return interfaces under which the target will be published as an OSGi
+	 *         service
 	 */
-	public Class<?>[] getInterfaces() {
+	public Class[] getInterfaces() {
 		return interfaces;
 	}
 
 	/**
-	 * Sets the interfaces advertised by the service.These will be advertised in the OSGi space and are considered when
-	 * looking for a service.
+	 * Sets the interfaces advertised by the service.These will be advertised in
+	 * the OSGi space and are considered when looking for a service.
 	 * 
 	 * @param interfaces array of classes to advertise
 	 */
-	public void setInterfaces(Class<?>[] interfaces) {
+	public void setInterfaces(Class[] interfaces) {
 		this.interfaces = interfaces;
 	}
 
@@ -658,8 +558,11 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Set the ordering which will apply to this class's implementation of Ordered, used when applying multiple
-	 * BeanPostProcessors. <p> Default value is <code>Integer.MAX_VALUE</code>, meaning that it's non-ordered.
+	 * Set the ordering which will apply to this class's implementation of
+	 * Ordered, used when applying multiple BeanPostProcessors.
+	 * <p>
+	 * Default value is <code>Integer.MAX_VALUE</code>, meaning that it's
+	 * non-ordered.
 	 * 
 	 * @param order ordering value
 	 */
@@ -668,7 +571,8 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 	}
 
 	/**
-	 * Returns the bean name of this class when configured inside a Spring container.
+	 * Returns the bean name of this class when configured inside a Spring
+	 * container.
 	 * 
 	 * @return the bean name for this class
 	 */
@@ -678,16 +582,5 @@ public class OsgiServiceFactoryBean extends AbstractOsgiServiceExporter implemen
 
 	public void setBeanName(String name) {
 		this.beanName = name;
-	}
-
-	/**
-	 * Sets the caching of the exported target object. When enabled, the exporter will ignore the scope of the
-	 * target bean and use only the first resolved instance for registration. When disabled (default), the scope of the
-	 * target bean is considered and each service request, will be directed to the container.
-	 * 
-	 * Set this option to 'true' to obtain OSGi 4.2 blueprint behaviour.
-	 */
-	public void setCacheTarget(boolean cacheTarget) {
-		this.cacheTarget = cacheTarget;
 	}
 }
