@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2009 the original author or authors.
+ * Copyright 2006-2008 the original author or authors.
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -29,12 +29,12 @@ import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
 
 /**
- * Utility class for creating nice string representations of various OSGi classes.
+ * Utility class for creating nice string representations of various OSGi
+ * classes.
  * 
  * @author Costin Leau
  * 
  */
-@SuppressWarnings("unchecked")
 public abstract class OsgiStringUtils {
 
 	/** Constant over the Bundle events */
@@ -50,6 +50,7 @@ public abstract class OsgiStringUtils {
 	private static final String NULL_STRING = "null";
 	private static final String EMPTY_STRING = "";
 
+
 	/**
 	 * Returns a String representation for the given bundle event.
 	 * 
@@ -58,8 +59,9 @@ public abstract class OsgiStringUtils {
 	 */
 	public static String nullSafeBundleEventToString(int eventType) {
 		try {
-			return BUNDLE_EVENTS.toCode(Integer.valueOf(eventType), "");
-		} catch (ConstantException cex) {
+			return BUNDLE_EVENTS.toCode(new Integer(eventType), "");
+		}
+		catch (ConstantException cex) {
 			return UNKNOWN_EVENT_TYPE;
 		}
 
@@ -75,8 +77,9 @@ public abstract class OsgiStringUtils {
 		if (event == null)
 			return NULL_STRING;
 		try {
-			return BUNDLE_EVENTS.toCode(Integer.valueOf(event.getType()), EMPTY_STRING);
-		} catch (ConstantException cex) {
+			return BUNDLE_EVENTS.toCode(new Integer(event.getType()), EMPTY_STRING);
+		}
+		catch (ConstantException cex) {
 			return UNKNOWN_EVENT_TYPE;
 		}
 	}
@@ -91,15 +94,16 @@ public abstract class OsgiStringUtils {
 		if (event == null)
 			return NULL_STRING;
 		try {
-			return SERVICE_EVENTS.toCode(Integer.valueOf(event.getType()), EMPTY_STRING);
-		} catch (ConstantException cex) {
+			return SERVICE_EVENTS.toCode(new Integer(event.getType()), EMPTY_STRING);
+		}
+		catch (ConstantException cex) {
 			return UNKNOWN_EVENT_TYPE;
 		}
 
 	}
 
 	/**
-	 * Returns a String representation for the given <code>FrameworkEvent</code> .
+	 * Returns a String representation for the given <code>FrameworkEvent</code>.
 	 * 
 	 * @param event OSGi <code>FrameworkEvent</code> (can be <code>null</code>)
 	 * @return String representation of the given event
@@ -108,14 +112,16 @@ public abstract class OsgiStringUtils {
 		if (event == null)
 			return NULL_STRING;
 		try {
-			return FRAMEWORK_EVENTS.toCode(Integer.valueOf(event.getType()), EMPTY_STRING);
-		} catch (ConstantException cex) {
+			return FRAMEWORK_EVENTS.toCode(new Integer(event.getType()), EMPTY_STRING);
+		}
+		catch (ConstantException cex) {
 			return UNKNOWN_EVENT_TYPE;
 		}
 	}
 
 	/**
-	 * Returns a String representation of the given <code>ServiceReference</code>.
+	 * Returns a String representation of the given
+	 * <code>ServiceReference</code>.
 	 * 
 	 * @param reference OSGi service reference (can be <code>null</code>)
 	 * @return String representation of the given service reference
@@ -124,7 +130,7 @@ public abstract class OsgiStringUtils {
 		if (reference == null)
 			return NULL_STRING;
 
-		StringBuilder buf = new StringBuilder();
+		StringBuffer buf = new StringBuffer();
 		Bundle owningBundle = reference.getBundle();
 
 		buf.append("ServiceReference [").append(OsgiStringUtils.nullSafeSymbolicName(owningBundle)).append("] ");
@@ -160,8 +166,9 @@ public abstract class OsgiStringUtils {
 		int state = bundle.getState();
 
 		try {
-			return BUNDLE_STATES.toCode(Integer.valueOf(state), "");
-		} catch (ConstantException cex) {
+			return BUNDLE_STATES.toCode(new Integer(state), "");
+		}
+		catch (ConstantException cex) {
 			return "UNKNOWN STATE";
 		}
 	}
@@ -185,7 +192,8 @@ public abstract class OsgiStringUtils {
 	}
 
 	/**
-	 * Returns the name of the given <code>Bundle</code> in a null-safe manner.
+	 * Returns the name of the given <code>Bundle</code> in a null-safe
+	 * manner.
 	 * 
 	 * @param bundle OSGi bundle (can be <code>null</code>)
 	 * @return bundle name
@@ -206,7 +214,8 @@ public abstract class OsgiStringUtils {
 	}
 
 	/**
-	 * Returns the bundle name and symbolic name - useful when logging bundle info.
+	 * Returns the bundle name and symbolic name - useful when logging bundle
+	 * info.
 	 * 
 	 * @param bundle OSGi bundle (can be null)
 	 * @return the bundle name and symbolic name
@@ -220,7 +229,7 @@ public abstract class OsgiStringUtils {
 		if (dict == null)
 			return NULL_STRING;
 
-		StringBuilder buf = new StringBuilder();
+		StringBuffer buf = new StringBuffer();
 		String name = (String) dict.get(org.osgi.framework.Constants.BUNDLE_NAME);
 		if (name == null)
 			buf.append(NULL_STRING);
@@ -238,4 +247,5 @@ public abstract class OsgiStringUtils {
 
 		return buf.toString();
 	}
+
 }
